# hpp-affordance-corba

./: CMakeLists.txt
include/hpp/corbaserver/affordance/: fwd.hh  server.hh
src/: CMakeLists.txt  affordance.impl.cc  affordance.impl.hh  hpp-affordance-corba.cc  server.cc
src/hpp/corbaserver/affordance/: affordance.py  client.py  corba.py  robot.py
tests/: test-affordance-config.py  test-oriented-box.py
